--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <p class="search__sub-title">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за прошедшую неделю.</p>
           <div class="search__inputs">
             <input class="search__input" type="text" placeholder="Введите тему новости">
-            <button class="search__submit" type="submit">Иска</button>
+            <button class="search__submit" type="submit">Искать</button>
           </div>
         </div>
       </section>
