отправка работы на проверку на второй чекпоинт

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
             <img class="results__image" src="<%=require('./images/image_04.png')%>">
             <div class="results__article">
               <p class="results__date">2 августа, 2019</p>
-              <h3 class="results__sub-title">Лесные огоньки: история одной фотографии</h3>
+              <h3 class="results__sub-title">Национальное достояние – парки</h3>
               <p class="results__text">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного
                 из местных чудес природы.</p>
               <p class="results__news-agency">Медуза</p>
@@ -69,7 +69,7 @@
             <img class="results__image" src="<%=require('./images/image_07.png')%>">
             <div class="results__article">
               <p class="results__date">2 августа, 2019</p>
-              <h3 class="results__sub-title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h3>
+              <h3 class="results__sub-title">Национальное достояние – парки</h3>
               <p class="results__text">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
               <p class="results__news-agency">Риа</p>
             </div>
@@ -87,7 +87,7 @@
             <img class="results__image" src="<%=require('./images/image_01.png')%>">
             <div class="results__article">
               <p class="results__date">2 августа, 2019</p>
-              <h3 class="results__sub-title">«Лесные огоньки: история одной фотографии</h3>
+              <h3 class="results__sub-title">Национальное достояние – парки</h3>
               <p class="results__text">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного
                 из местных чудес природы.</p>
               <p class="results__news-agency">Афиша</p>
