Обновил файлы после первой итерации второго этапа

--- a/src/analytics.html
+++ b/src/analytics.html
@@ -74,8 +74,8 @@
     </ul>
     </nav>
     <div class="footer__icon">
-      <img class="footer__image" src="./images/cat-icon.png">
-      <img class="footer__image" src="./images/fb-icon.png">
+      <img class="footer__image" src="<%=require('./images/cat-icon.png')%>" alt="Иконка кота">
+      <img class="footer__image" src="<%=require('./images/fb-icon.png')%>"alt="Иконка фейсбук">
     </div>
   </footer>
 </body>
