--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="News Analyzer сайт для анализа происходящих в мире событий, его задача - установить, насколько популярны новости на опредленную тему">
     <meta name="author" content="Nedospasov N.V.">
     <title>News Analyzer</title>
-    <link rel="shortcut icon" href="<%=require('./images/Group__favicon.png')%>">
+    <link rel="shortcut icon" type="image/x-icon" href="<%=require('./images/Group__favicon.png')%>">
 </head>
 <body class="main">
       <header class="header">
@@ -20,10 +20,10 @@
         <div class="search__block">
           <h1 class="search__title">Что в мире творится?</h1>
           <p class="search__sub-title">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за прошедшую неделю.</p>
-          <div class="search__inputs">
-            <input class="search__input" type="text" placeholder="Введите тему новости">
+          <form class="search__inputs">
+            <input class="search__input" type="text" placeholder="Введите тему новости" required>
             <button class="search__submit" type="submit">Искать</button>
-          </div>
+          </form>
         </div>
       </section>
       <section class="loader">
@@ -43,11 +43,11 @@
       <section class="results">
         <div class="results__info">
           <h2 class="results__title">Результаты поиска</h2>
-          <a class="results__link" href="./analytics.html">Посмотреть аналитику <img class="results__arrow" src="<%=require('./images/Path 5.png')%>"></a>
+          <a class="results__link" href="./analytics.html">Посмотреть аналитику <img class="results__arrow" src="<%=require('./images/Path 5.png')%>" alt="Стрелочка"></a>
         </div>
         <div class="results__cards">
           <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_08.png')%>">
+            <img class="results__image" src="<%=require('./images/image_08.png')%>" alt="Новостная картинка">
             <div class="results__article">
               <p class="results__date">2 августа, 2019</p>
               <h3 class="results__sub-title">Национальное достояние – парки</h3>
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_04.png')%>">
+            <img class="results__image" src="<%=require('./images/image_04.png')%>" alt="Новостная картинка">
             <div class="results__article">
               <p class="results__date">2 августа, 2019</p>
               <h3 class="results__sub-title">Национальное достояние – парки</h3>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_07.png')%>">
+            <img class="results__image" src="<%=require('./images/image_07.png')%>" alt="Новостная картинка">
             <div class="results__article">
               <p class="results__date">2 августа, 2019</p>
               <h3 class="results__sub-title">Национальное достояние – парки</h3>
@@ -75,7 +75,7 @@
             </div>
           </div>
           <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_06.png')%>">
+            <img class="results__image" src="<%=require('./images/image_06.png')%>" alt="Новостная картинка">
             <div class="results__article">
               <p class="results__date">2 августа, 2019</p>
               <h3 class="results__sub-title">Национальное достояние – парки</h3>
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_01.png')%>">
+            <img class="results__image" src="<%=require('./images/image_01.png')%>" alt="Новостная картинка">
             <div class="results__article">
               <p class="results__date">2 августа, 2019</p>
               <h3 class="results__sub-title">Национальное достояние – парки</h3>
@@ -102,7 +102,7 @@
           <h2 class="author__title">Об авторе</h2>
           <p class="author__sub-title">
             Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владеете.
- Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь потенциальным заказчикам.
+Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь потенциальным заказчикам.
           </p>
         </div>
       </section>
@@ -122,8 +122,8 @@
         </ul>
         </nav>
         <div class="footer__icon">
-          <img class="footer__image" src="<%=require('./images/cat-icon.png')%>">
-          <img class="footer__image" src="<%=require('./images/fb-icon.png')%>">
+          <img class="footer__image" src="<%=require('./images/cat-icon.png')%>" alt="Иконка кота">
+          <img class="footer__image" src="<%=require('./images/fb-icon.png')%>" alt="Иконка фейсбук">
         </div>
       </footer>
 </body>
