--- a/src/about.html
+++ b/src/about.html
@@ -76,7 +76,7 @@
       </p>
     </div>
   </section>
-  <section class="commits">
+  <!-- <section class="commits">
     <div class="commits__info">
       <h2 class="commits__title">История коммитов из GitHub</h2>
       <a href="https://github.com/roniroll/newsAnalyzer" target="_blank" class="commits__link">Открыть в  Github<img class="commits__arrow" src="./images/Path 5.png"></a>
@@ -119,7 +119,7 @@
           developer’s toolkit that can greatly improve your HTML & CSS workflow.</p>
       </div>
     </div>
-  </section>
+  </section> -->
   <footer class="footer">
     <p class="footer__copyright">&copy; 2019. Supersite</p>
     <nav class="footer__links">
@@ -136,8 +136,8 @@
     </ul>
     </nav>
     <div class="footer__icon">
-      <img class="footer__image" src="./images/cat-icon.png">
-      <img class="footer__image" src="./images/fb-icon.png">
+      <img class="footer__image" src="<%=require('./images/cat-icon.png')%>" alt="Иконка кота">
+      <img class="footer__image" src="<%=require('./images/fb-icon.png')%>" alt="Иконка фейсбук">
     </div>
   </footer>
 </body>
