Исправил блок commits

--- a/src/about.html
+++ b/src/about.html
@@ -76,7 +76,7 @@
       </p>
     </div>
   </section>
-  <!-- <section class="commits">
+  <section class="commits">
     <div class="commits__info">
       <h2 class="commits__title">История коммитов из GitHub</h2>
       <a href="https://github.com/roniroll/newsAnalyzer" target="_blank" class="commits__link">Открыть в  Github<img class="commits__arrow" src="./images/Path 5.png"></a>
@@ -119,7 +119,8 @@
           developer’s toolkit that can greatly improve your HTML & CSS workflow.</p>
       </div>
     </div>
-  </section> -->
+    <button class="commits__button"><a href="https://github.com/roniroll/newsAnalyzer" class="commits__button commits__button_link" target="_blank">Открыть в GitHub</a> </button>
+  </section>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2019. Supersite</p>
     <nav class="footer__links">
