--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
         <div class="search__block">
           <h1 class="search__title">Что в мире творится?</h1>
           <p class="search__sub-title">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за прошедшую неделю.</p>
-          <form class="search__inputs">
-            <input class="search__input" type="text" placeholder="Введите тему новости" required>
-            <button class="search__submit" type="submit">Искать</button>
+          <form class="search__form" name="form__search">
+            <input class="search__input" id="form__input" title="Нужно ввести ключевое слово" name="form__input" type="text" placeholder="Введите тему новости">
+            <button class="search__submit" name="form__submit" type="submit">Искать</button>
           </form>
         </div>
       </section>
