--- a/src/index.html
+++ b/src/index.html
@@ -40,57 +40,16 @@
           ничего не найдено.
         </p>
       </section>
+      <section class="error">
+        <p class="error__text">Во время запроса произошла ошибка. Возможно, проблема с соединением или сервер недоступен.
+          Подождите немного и попробуйте ещё раз</p>
+      </section>
       <section class="results">
         <div class="results__info">
           <h2 class="results__title">Результаты поиска</h2>
           <a class="results__link" href="./analytics.html">Посмотреть аналитику <img class="results__arrow" src="<%=require('./images/Path 5.png')%>" alt="Стрелочка"></a>
         </div>
         <div class="results__cards">
-          <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_08.png')%>" alt="Новостная картинка">
-            <div class="results__article">
-              <p class="results__date">2 августа, 2019</p>
-              <h3 class="results__sub-title">Национальное достояние – парки</h3>
-              <p class="results__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
-              <p class="results__news-agency">Лента.ру</p>
-            </div>
-          </div>
-          <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_04.png')%>" alt="Новостная картинка">
-            <div class="results__article">
-              <p class="results__date">2 августа, 2019</p>
-              <h3 class="results__sub-title">Национальное достояние – парки</h3>
-              <p class="results__text">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного
-                из местных чудес природы.</p>
-              <p class="results__news-agency">Медуза</p>
-            </div>
-          </div>
-          <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_07.png')%>" alt="Новостная картинка">
-            <div class="results__article">
-              <p class="results__date">2 августа, 2019</p>
-              <h3 class="results__sub-title">Национальное достояние – парки</h3>
-              <p class="results__text">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
-              <p class="results__news-agency">Риа</p>
-            </div>
-          </div>
-          <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_06.png')%>" alt="Новостная картинка">
-            <div class="results__article">
-              <p class="results__date">2 августа, 2019</p>
-              <h3 class="results__sub-title">Национальное достояние – парки</h3>
-              <p class="results__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.</p>
-              <p class="results__news-agency">Дзен</p>
-            </div>
-          </div>
-          <div class="results__card">
-            <img class="results__image" src="<%=require('./images/image_01.png')%>" alt="Новостная картинка">
-            <div class="results__article">
-              <p class="results__date">2 августа, 2019</p>
-              <h3 class="results__sub-title">Национальное достояние – парки</h3>
-              <p class="results__text">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы запечатлеть ускользающую красоту одного
-                из местных чудес природы.</p>
-              <p class="results__news-agency">Афиша</p>
             </div>
           </div>
         </div>
