--- a/src/analytics.html
+++ b/src/analytics.html
@@ -18,7 +18,7 @@
   </header>
   <section class="analytics">
     <p class="analytics__nav">Главная <span class="analytics__nav_no-active">/ Аналитика</span></p>
-    <p class="analytics__request">Вы спросили: «Путешествия»</p>
+    <p class="analytics__request">Вы спросили: «<span class="analytics__request_value">Путешествия</span>»</p>
     <ul class="analytics__list">
       <li class="analytics__week">Новостей за неделю: <span class="analytics__week analytics__week_count">324</span></li>
       <li class="analytics__mention">Упоминаний в загаловках: <span class="analytics__mention analytics__mention_count">235</span></li>
@@ -27,7 +27,7 @@
   <section class="infographics">
     <h2 class="infographics__title">Аналитика по дням</h2>
     <div class="infographics__info">
-      <p class="infographics__date">Дата (август)</p>
+      <p class="infographics__date">Дата <br>(<span class="analytics__date_mounth"></span>)</p>
       <p class="infographics__count-mention">Кол-во упоминаний</p>
     </div>
     <div class="infographics__counts">
@@ -38,24 +38,10 @@
       <p class="infographics__count">100</p>
     </div>
     <div class="infographics__chart">
-    <div class="infographics__dates">
-      <p class="infographics__day">19, пн</p>
-      <p class="infographics__day">20, вт</p>
-      <p class="infographics__day">21, ср</p>
-      <p class="infographics__day">22, чт</p>
-      <p class="infographics__day">23, пт</p>
-      <p class="infographics__day">24, сб</p>
-      <p class="infographics__day">25, вс</p>
-    </div>
-    <div class="infographics__lines">
-      <p class="ingographics__line">15</p>
-      <p class="ingographics__line">18</p>
-      <p class="ingographics__line">11</p>
-      <p class="ingographics__line">39</p>
-      <p class="ingographics__line">45</p>
-      <p class="ingographics__line">73</p>
-      <p class="ingographics__line">34</p>
-    </div>
+      <div class="infographics__dates">
+      </div>
+      <div class="infographics__lines">
+      </div>
     </div>
   </section>
   <footer class="footer">
