Обновление информации об авторе

--- a/src/index.html
+++ b/src/index.html
@@ -56,12 +56,12 @@
         <button class="results__else">Показать еще</button>
       </section>
       <section class="author">
-        <img class="author__image" src="<%=require('./images/image-03.png')%>" alt="Фото автора">
+        <img class="author__image" src="<%=require('./images/Никита.jpeg')%>" alt="Фото автора">
         <div class="author__description">
           <h2 class="author__title">Об авторе</h2>
           <p class="author__sub-title">
-            Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы занимаетесь, какими технологиями разработки владеете.
-Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь потенциальным заказчикам.
+            Меня зовут Никита, я из Москвы. В процессе обучения в Яндекс.Практикуме я прежде всего овладел навыками написания кода на HTML, CSS и JavaScript.
+            Также по мере прохождения обучения был изучен процесс сборки проекта на Webpack, а также система контроля версий Git.
           </p>
         </div>
       </section>
